Added the basic boid rules

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,5 +4,6 @@ project (particleSimulationBoids)
 find_package(SDL2 REQUIRED)
 include_directories(SDL2Test ${SDL2_INCLUDE_DIRS})
 
-add_executable (run main.cpp)
+
+add_executable (run main.cpp src/boid.cpp src/generateBoids.cpp)
 target_link_libraries(run ${SDL2_LIBRARIES})
